--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -20,10 +20,10 @@ h2 {
     color: #d268d9;
 }
 h3 {
-    color: #d2c9df;
+    color: #817298;
 }
 h1{
-    background-color: #f5c9df;
+    color: #85677d;
 }
 body {
     background-color: #d2c9df;
