--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -55,7 +55,63 @@ h3 {
     font-family: oswald medium;
 }
 /* Dit is mijn style guide */
-.table1, table2 {
+.table1, .table2 {
     text-align: center;
-    background-color: white;
+    border: 2px solid #d268d9;
+    padding: 10px;
+    background-color: #ffffff;
+    font-family: arial regular;
 }
+.table2 {
+    float: right;
+}
+.extralight {
+    font-family: oswald extralight;
+    font-size: 12pt;
+    line-height: 16pt;
+}
+.light {
+    font-family: oswald light;
+    font-size: 35pt;
+    line-height: 42pt;
+}
+.regular {
+    font-family: oswald regular;
+    font-size: 45pt;
+    line-height: 54pt;
+}
+.kleur1 {
+    color: #d268d9;
+}
+.kleur2 {
+    color: #d2c9df;
+}
+.kleur3 {
+    color: #817298;
+}
+.kleur4 {
+    color: #85677d;
+}
+.kleur5 {
+    color: #b194f3;
+}
+.kleur6 {
+    color: #f5c9df;
+}
+th {
+    color: #817298;
+}
+
+* {
+    font-family: oswald regular, oswald extralight;
+    color: black;
+    text-align: center;}
+#nav, #feature, .article, #footer {
+    background-color: #f5c9df;
+    margin-top: 20px;
+    padding: 10px 0px 5px 0px;}
+#feature, .article {
+    height: 100px;}
+li {
+    display: inline;
+    padding: 5px;}
