--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -66,6 +66,16 @@ img.one {
     right: 50px;
     top: 110px;
     display: inherit;}
+.kleurstaal, .lettertype, .knoppen, .stijlen, .links, .iconen, .navigatie {
+    border: solid black;
+    background-color: white;
+    color: black;
+    padding: 10px;
+    width: 160px;
+    border-radius: 10px;
+    max-width: 160px;
+    text-align: center;
+}
 .kleur1, .kleur2, .kleur3, .kleur4, .kleur5, .kleur6 {
     padding: 20px;
     width: 275px;
@@ -84,7 +94,7 @@ img.one {
     border: 10px solid #f5c9df;}
 .lettertype {
     position: absolute;
-    top: 113px;
+    top: 107px;
     left: 470px;
     width: 400px;}
 .lettertype1 {
@@ -128,7 +138,7 @@ img.one {
 }
 .stijlen {
     position: absolute;
-    top: 680px;
+    top: 715px;
     left: 470px;
     width: 600px;
 }
@@ -139,7 +149,7 @@ img.one {
     text-align: center;
 }
 .stijl1 {
-    top: 750px;
+    top: 805px;
     background-color: #d2c9df;
     border: solid #d2c9df;
     position: absolute;
@@ -147,7 +157,7 @@ img.one {
     width: 50px;
 }
 .stijl2 {
-    top: 750px;
+    top: 805px;
     background-color: #d2c9df;
     border: solid #d2c9df;
     opacity: 0.5;
@@ -156,7 +166,7 @@ img.one {
     width: 50px;
 }
 .stijl3 {
-    top: 750px;
+    top: 805px;
     background-color: white;
     border: solid #333;
     position: absolute;
@@ -164,7 +174,7 @@ img.one {
     width: 50px;
 }
 .stijl4 {
-    top: 750px;
+    top: 805px;
     background-color: #85677d;
     border: solid #85677d;
     position: absolute;
@@ -172,10 +182,55 @@ img.one {
     width: 50px;
 }
 .stijl5 {
-    top: 750px;
+    top: 805px;
     background-color: #f5c9df;
     border: solid #f5c9df;
     position: absolute;
     left: 710px;
     width: 50px;
 }
+.navigatie1 {
+    background-color: #85677d;
+    flood-opacity: 0.2;
+    padding: 10px;
+    width: 80px;
+    border-radius: 0px;
+    text-align: left;
+}
+.links {
+    position: absolute;
+    top: 890px;
+    left: 470px;
+    width: 600px;
+}
+p.link1 {
+    position: absolute;
+    top: 980px;
+    left: 470px;
+    width: 600px;
+}
+p.link2 {
+    position: absolute;
+    top: 1020px;
+    left: 470px;
+    width: 600px;
+}
+p.link3 {
+    position: absolute;
+    top: 1060px;
+    left: 470px;
+    width: 600px;
+}
+p.link4 {
+    position: absolute;
+    top: 1110px;
+    left: 470px;
+    width: 600px;
+}
+p.link5 {
+    position: absolute;
+    top: 1400px;
+    left: 470px;
+    width: 600px;
+}
+
